# LoggerApp

./: CMakeLists.txt  Doxyfile.in  README.md
qml/: Main.qml
src/: loggermodel.cpp  loggermodel.h  main.cpp  proxyfiltermodel.cpp  proxyfiltermodel.h
tests/: tst_loggermodel.cpp  tst_main.cpp  tst_proxyfiltermodel.cpp
